Fix rankings table on mobile

--- a/client/src/components/Rankings/Rankings.css
+++ b/client/src/components/Rankings/Rankings.css
@@ -18,6 +18,7 @@
 }
 
 table {
+    max-width: 90%;
     border-collapse: collapse;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -65,4 +66,20 @@ table .username a {
 
 table .username a:hover {
     text-decoration: none;
+}
+
+@media screen and (max-width: 900px) {
+    table td.username {
+        font-size: .8em;
+    }
+
+    th,
+    td {
+        padding: 10px;
+    }
+
+    th:first-child,
+    td:first-child {
+        padding-right: 0;
+    }
 }
